--- a/streaming-benchmark.cabal
+++ b/streaming-benchmark.cabal
@@ -10,5 +10,6 @@ executable streaming-benchmark
         streaming, 
         bytestring, 
         streaming-bytestring
+    ghc-options: -O2
     default-language: Haskell2010
 
